--- a/src/main/resources/templates/process/processInstance.html
+++ b/src/main/resources/templates/process/processInstance.html
@@ -96,7 +96,7 @@
               <div class="flex justify-between items-start mb-3">
                 <div class="flex-grow-1">
                   <h3 class="font-bold text-lg text-white mb-1" th:text="${@stringUtils.camelToWords(process.processDefinitionName)}">Employee Onboarding</h3>
-                  <p th:text="${'Client Name: ' + process.processVariables.clientName}" class="text-slate-400 text-sm">Process ID: PI-2023-001</p>
+                  <p  th:text="${'Description: ' + process.processVariables.entrySet().iterator().next().value.substring(0, 25)}" class="text-slate-400 text-sm">Process ID: PI-2023-001</p>
                 </div>
                 <span class="status-pill "
                       th:classappend="${process.ended ? 'status-completed' : 'status-inprogress'}"
